# easy-share-memory-api

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  LICENSE  README.md
mShm/: CMakeLists.txt
mShm/examples/: CMakeLists.txt  main_reader.cpp  main_writer.cpp
mShm/include/: mshm.h
mShm/src/: mshm_linux.cpp  mshm_win.cpp
mShm/tests/: CMakeLists.txt  test_main.cpp
